--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>EmuOtoriAc | 凤笑梦研究学会</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="This is the official website of EmuOtoriAc" name="description">
+  <meta content="EmuOtoriAc, Research, Association" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" alt="EmuOtoriAc Icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" alt="EmuOtoriAc Apple Touch Icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -31,9 +31,6 @@
 
 <body>
 
-  <!-- ======= Mobile nav toggle button ======= -->
-  <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex flex-column justify-content-center">
 
@@ -45,13 +42,13 @@
         <li><a href="https://pjsekai.sega.jp/" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>PJSK官网</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
-›
+
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Emu Otori I Love You</h1>
+      <h1>Emu Otori Academic</h1>
       <p>我们是 <span class="typed" data-typed-items="码农, 生物科学, 医学院学生, EMU单推人"></span></p>
     </div>
   </section><!-- End Hero -->
