--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex flex-column justify-content-center">
-
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="http://github.com/emuotoriac" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Github组织</span></a></li>
